<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.dvsa.testing.lib</groupId>
  <artifactId>zap-scanner-suite</artifactId>
  <version>1.1.1-SNAPSHOT</version>

  <properties>
    <apache-log4j.version>2.25.3</apache-log4j.version>
    <zap-clientapi.version>1.16.0</zap-clientapi.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.version>3.11.0</maven.compiler.version>
    <github.url>https://maven.pkg.github.com/dvsa/vol-app-security-lib</github.url>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.version}</version>
        <configuration>
          <release>21</release>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>org.zaproxy</groupId>
      <artifactId>zap-clientapi</artifactId>
      <version>${zap-clientapi.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.jdom</groupId>
          <artifactId>jdom</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>${apache-log4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${apache-log4j.version}</version>
    </dependency>
  </dependencies>


  <distributionManagement>
    <repository>
        <id>dvsa-github-packages</id>
        <name>GitHub dvsa Apache Maven Packages</name>
        <url>${github.url}</url>
    </repository>
</distributionManagement>
</project>